ITP Database crashes if table schema is not correct https://bugs.webkit.org/show_bug.cgi?id=204458 <rdar://problem/57399084>

Reviewed by Brent Fulgham.

ITP database was crashing if the table schema wasn't correct. This
should instead be handled by re-opening a new database with a correct
schema to allow for future schema updates.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::isCorrectTableSchema):
(WebKit::ResourceLoadStatisticsDatabaseStore::openAndDropOldDatabaseIfNecessary):
* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.h:


Canonical link: https://commits.webkit.org/217792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252817 268f45cc-cd09-0410-ab3c-d52691b4dbfc